Remove unused getIndexRenames()